# HouseOfMath

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Start HouseOfMath.command  fix_latex.py  fix_tags.py  houseofmath.config.example.yaml  instructions.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
Question Bank/: README.md
Question Bank/algebra/: difficult.json  easy.json  medium.json
Question Bank/arithmetic/: difficult.json  easy.json  medium.json
Question Bank/fractions/: difficult.json  easy.json  medium.json
Question Bank/geometry/: difficult.json  easy.json  medium.json
Question Bank/percentages/: difficult.json  easy.json  medium.json
Question Bank/statistics/: difficult.json  easy.json  medium.json
houseofmath/: __init__.py  cli.py  config.py  curator.py  reporter.py  tutor.py
houseofmath/app/: streamlit_app.py
houseofmath/llm/: __init__.py  anthropic_client.py  base.py  claude_code_client.py  factory.py  gemini_client.py  none_client.py  ollama_client.py  openai_client.py
houseofmath/prompts/: __init__.py  generate.md
houseofmath/storage/: __init__.py  history.py
houseofmath/validation/: __init__.py  schema.py
scripts/importers/: import_ck12.py  import_openstax.py
tests/: test_bank_integration.py  test_curator.py  test_llm_adapters.py  test_reporter.py  test_storage.py  test_validation.py
tests/fixtures/sample_bank/algebra/: easy.json
